# wepoll

./: .appveyor.yml  .clang-format  .eslintrc.json  .gitignore  .prettierrc.json  CMakeLists.txt  LICENSE  README.md  epoll.gyp  epoll.sln  epoll.vcxproj  gen.bat  run-cmake.bat  test.vcxproj  wepoll.c  wepoll.h  wpoll.gyp  wpoll.sln  wpoll.vcxproj
allinone/: build.js  epoll-all-in-one.c  header.h  wepoll-all-in-one.c  wepoll.h
config/internal/bundle/: config-internal.h
config/internal/default/: config-internal.h
doc/: README.md
epoll/: epoll.sln  epoll.vcxproj
include/: epoll.h  wepoll.h  wpoll.h
src/: afd.c  afd.h  api.c  api.h  config.h  epoll-init.h  epoll-socket.c  epoll-socket.h  epoll.c  error-map.h  error.c  error.h  handle-tree.c  handle-tree.h  init.c  init.h  internal.h  msafd.c  msafd.h  nt.c  nt.h  ntapi.h  ntstatus.h  poll-group.c  poll-group.h  poll-request.c  poll-request.h  port-data.h  port.c  port.h  queue.c  queue.h  rb.h  reflock-tree.c  reflock-tree.h  reflock.c  reflock.h  sock-data.h  sock.c  sock.h  (+13 more)
src/combined/: internal.h
src/regular/: internal.h
test/: test-auto-drop-on-close.c  test-connect-fail-events.c  test-connect-success-events.c  test-ctl-fuzz.c  test-error.c  test-leak-1.c  test-mixed-socket-types.c  test-multi-poll.c  test-oneshot-and-hangup.c  test-reflock.c  test-tree.c  test-udp-pings.c
test/shared/: leak-check.c  test-util.c  test-util.h
tools/: bundle.js  combine.js  generate-all-in-one.js  release.js  run-tests.js
